--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,9 @@ html {
 		}
 		.masonry-item {
 			filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .3));
-			transition: filter .25s ease-in-out;
+      transition: filter .25s ease-in-out;
+      min-height: 70px;
+      background-color: aquamarine;
 		}
 		
 		.masonry-footer {
