--- a/css/style.css
+++ b/css/style.css
@@ -290,10 +290,30 @@ body.sticky-header header h1 {
 
 #model-3d {
 	width: 100%;
+	min-height: 500px;
+	display: block;
 }
 
 #animation-3d {
 	width: 100%;
+	min-height: 500px;
+	display: block;
+}
+
+#model-3d {
+	width: 100%;
+	min-height: 500px;
+	display: block;
+}
+
+#animation-3d {
+	width: 100%;
+	min-height: 500px;
+	display: block;
+}
+
+section {
+	position: relative;
 }
 
 
@@ -316,3 +336,42 @@ body.sticky-header header h1 {
 	}
 }
 
+.lds-ripple {
+	display: block;
+	position: absolute;
+	width: 80px;
+	height: 80px;
+	z-index: 9999;
+	margin: auto;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+  }
+  .lds-ripple div {
+	position: absolute;
+	border: 4px solid #fff;
+	opacity: 1;
+	border-radius: 50%;
+	animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+  .lds-ripple div:nth-child(2) {
+	animation-delay: -0.5s;
+  }
+  @keyframes lds-ripple {
+	0% {
+	  top: 36px;
+	  left: 36px;
+	  width: 0;
+	  height: 0;
+	  opacity: 1;
+	}
+	100% {
+	  top: 0px;
+	  left: 0px;
+	  width: 72px;
+	  height: 72px;
+	  opacity: 0;
+	}
+  }
+  
