update scrollpage, update list project, add model for zoom imnage

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -622,7 +622,7 @@ footer {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    
+
     align-items: center;
     text-align: center;
 }
@@ -635,7 +635,7 @@ footer .container {
     transition: opacity 0.8s ease;
     width: 75%;
     z-index: 10;
-    
+
 }
 
 section.active .container {
@@ -810,6 +810,7 @@ ul.side-nav li.active a span {
         -1px -1px 0 #000;
     text-align: right;
     z-index: 999;
+    pointer-events: none;
 }
 
 
@@ -2225,6 +2226,7 @@ ul.folder-list li {
 }
 
 .box-content .list-item {
+    
     width: calc(50% - 25px);
     height: 150px;
     margin: 5px;
@@ -2240,7 +2242,10 @@ ul.folder-list li {
     flex-direction: column;
     padding: 5px;
     font-size: 0.7rem;
+    cursor: pointer;
 }
+
+
 
 .box-content .list-item img {
     width: 100%;
@@ -2304,6 +2309,112 @@ ul.folder-list li {
     list-style: disc;
 }
 
-#page4,#page5 {
+#page4,
+#page5 {
     justify-content: center;
+}
+
+/* The Modal (background) */
+.modal {
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 9999;
+    /* Sit on top */
+    padding-top: 100px;
+    /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.9);
+    /* Black w/ opacity */
+}
+
+/* Modal Content (image) */
+.modal-content {
+    margin: auto;
+    display: block;
+    width: 75%;
+
+}
+
+/* Caption of Modal Image */
+#caption {
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+    text-align: center;
+    color: #ccc;
+    padding: 10px 0;
+    height: 150px;
+}
+
+@-webkit-keyframes zoom {
+    from {
+        -webkit-transform: scale(1)
+    }
+
+    to {
+        -webkit-transform: scale(2)
+    }
+}
+
+@keyframes zoom {
+    from {
+        transform: scale(0.4)
+    }
+
+    to {
+        transform: scale(1)
+    }
+}
+
+@-webkit-keyframes zoom-out {
+    from {
+        transform: scale(1)
+    }
+
+    to {
+        transform: scale(0)
+    }
+}
+
+@keyframes zoom-out {
+    from {
+        transform: scale(1)
+    }
+
+    to {
+        transform: scale(0)
+    }
+}
+
+/* Add Animation */
+.modal-content,
+#caption {
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
+}
+
+.out {
+    animation-name: zoom-out;
+    animation-duration: 0.6s;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px) {
+    .modal-content {
+        width: 100%;
+    }
 }
